--- a/Frontend/pedidos-ya/src/css/header.css
+++ b/Frontend/pedidos-ya/src/css/header.css
@@ -1,4 +1,5 @@
 .navbar-header{
+    margin: 0;
     padding: 20px;
     background-color: rgb(255, 255, 255);
     border-bottom:1px solid rgb(219, 218, 222);
