--- a/Frontend/src/css/mainlogin.css
+++ b/Frontend/src/css/mainlogin.css
@@ -3,9 +3,7 @@
     width: 100vw;
     margin: 0;
     padding: 0;
-    background: radial-gradient(circle, rgba(255, 252, 252, 1) 0%, rgba(0, 0, 0, 1) 100%);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: #e60050;
 }
 .div-content-loginadmin{
     width: 100%;
