--- a/Frontend/src/css/mainlogin.css
+++ b/Frontend/src/css/mainlogin.css
@@ -13,6 +13,9 @@
     text-align: center;
 }
 
+.titulo{
+    margin-top: 40px
+}
 @media (min-width: 992px ){
     .form-admin{
         width: 30%;
